bug 864171 move "extra" time accounting for AudioContext with no nodes to destination stream r=padenot